fixing arrows jumping around when they should not

--- a/02-jsclock/style.css
+++ b/02-jsclock/style.css
@@ -49,3 +49,7 @@ body {
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
+.hand_trans {
+  transition: all 0s;
+}
+
